[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Test.theme" type="Theme" id=1]
[ext_resource path="res://scenes/Dialog.gd" type="Script" id=2]
[ext_resource path="res://assets/hud/Description box_new.png" type="Texture" id=3]
[ext_resource path="res://scenes/DialogText.gd" type="Script" id=4]
[ext_resource path="res://assets/FONT/MicroPix (1).ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/TrianglePulse.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[node name="Dialog" type="Control" groups=[
"dialog",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 266.0, 380.0, 320.0, 32.0, 206.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 24.0, 432.0 ]
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="ScrollContainer" parent="."]
margin_left = 26.0
margin_top = 50.0
margin_right = 443.0
margin_bottom = 192.0
rect_min_size = Vector2( 415, 0 )
scroll_horizontal_enabled = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="Label" parent="DialogText"]
margin_right = 405.0
margin_bottom = 321.0
rect_min_size = Vector2( 405, 0 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Testing
hoorah!
for motherland
countries burn
in peace.
a mouthful,
an ashen kiss,
a cawing crow,
beer foaming, slow"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextHandler" parent="." instance=ExtResource( 6 )]
margin_left = 410.0
margin_top = 222.0
margin_right = 415.0
margin_bottom = 225.0
rect_scale = Vector2( 2, 2 )
stretch_mode = 5

[node name="ActionScroll" type="ScrollContainer" parent="."]
margin_left = 24.0
margin_top = 266.0
margin_right = 432.0
margin_bottom = 380.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ActionScroll"]
custom_constants/separation = 0
[connection signal="draw" from="DialogText" to="DialogText" method="_on_DialogText_draw"]
